# AI-MIDI-generator

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: cloudrun-deploy.yml  create-release-pull-request.yaml
static/css/: style.css
templates/: index.html  result.html
